--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Archivos de configuración con credenciales
 config.js
+env.local.js
+
+# Variables de entorno
+.env
+.env.local
 
 # Node modules (si usas npm)
 node_modules/
@@ -11,6 +16,3 @@ Thumbs.db
 # Archivos de VS Code
 .vscode/
 
-# Variables de entorno
-.env
-.env.local
